# wp4-platform-controller

./: .dockerignore  Dockerfile  README.md  build_docker.sh  docker-compose.yaml  lle_settings.json  pyproject.toml
.github/workflows/: build.yaml
airflow/: docker-compose.yaml
airflow/dags/: lle.py
controller/: api.py  root_controller.py
controller/lle/: client.py  exceptions.py  settings.py  system.py
src/controller/: main.py  root.py  system.py  system_lle.py  system_lle_settings.py  system_plc.py
