[tool.poetry]
name = "controller"
version = "0.2.0"
description = ""
authors = ["Ihar Suvorau <ihar.suvorau@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.95.1"
requests = "^2.29.0"
uvicorn = "^0.22.0"
asyncua = "^1.0.2"
pydantic = "^1.10.7"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
